Este es mi segunda version, le agregue funcionalidad a la pagina

--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!-- Mi primer pagina web -->
 
 <html>
+<head>
+
+    
+</head>
 
 
+<body>
+    <h1>Hola que tal</h1>
+</body>
+    
 
 </html>
 
